<resources>
    <string name="app_name">NoTouchShoppingCart</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="carts_available">Search Carts</string>
    <string name="select_cart">Select cart</string>
    <string name="find_cart">FIND CART</string>
    <string name="cart_image">Cart Image</string>
    <string name="_000_000">000 / 000</string>
    <string name="str_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="disconnect">Disconnect</string>
    <string name="connected">Connected</string>
    <string name="steps">steps</string>
    <string name="manual_control">Manual Control</string>
    <string name="auto">Auto</string>
    <string name="connection">Connection</string>
    <string name="manual">Manual</string>
</resources>
