<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".Fragment.ManualFragment">

    <TextView
        android:id="@+id/textView6"
        style="@style/LargeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/manual_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/up"
        app:layout_constraintBottom_toTopOf="@+id/imgDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <ImageView
        android:id="@+id/imgLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:src="@drawable/left"
        app:layout_constraintBottom_toTopOf="@+id/imgDown"
        app:layout_constraintEnd_toStartOf="@+id/imgRight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUp" />

    <ImageView
        android:id="@+id/imgRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:src="@drawable/right"
        app:layout_constraintBottom_toTopOf="@+id/imgDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgLeft"
        app:layout_constraintTop_toBottomOf="@+id/imgUp" />

    <ImageView
        android:id="@+id/imgDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/down"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:showText="false"
        android:splitTrack="false"
        android:textOff="@string/manual"
        android:textOn="@string/auto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgDown" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="stop"
        app:layout_constraintBottom_toTopOf="@+id/imgDown"
        app:layout_constraintEnd_toStartOf="@+id/imgRight"
        app:layout_constraintStart_toEndOf="@+id/imgLeft"
        app:layout_constraintTop_toBottomOf="@+id/imgUp" />

</androidx.constraintlayout.widget.ConstraintLayout>